<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.3</version>
    </parent>

    <groupId>no.nav.sak</groupId>
    <artifactId>sak</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>app</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <oppgavehandtering-security.version>4.01.16</oppgavehandtering-security.version>
        <oppgavehandtering-resilience.version>1.00.08</oppgavehandtering-resilience.version>
        <abac.attribute.version>3.3.13</abac.attribute.version>

        <logback-syslog4j.version>1.0.0</logback-syslog4j.version>
        <logstash.encoder.version>7.2</logstash.encoder.version>

        <jaxb.version>3.0.2</jaxb.version>
        <commons.configuration.version>2.8.0</commons.configuration.version>
        <commons.beanutils.version>1.9.4</commons.beanutils.version>
        <nimbusds.version>9.43.1</nimbusds.version>

        <swagger.version>2.2.2</swagger.version>
        <swagger-ui.version>4.14.0</swagger-ui.version>
        <springdoc-openapi-ui.version>1.6.11</springdoc-openapi-ui.version>

        <ehcache.version>3.10.1</ehcache.version>
        <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
        <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
        <jersey.version>2.37</jersey.version>
        <gson.version>2.9.1</gson.version>
        <ojdbc.version>21.7.0.0</ojdbc.version>

        <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
        <token-support.version>2.1.7</token-support.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc-openapi-ui.version}</version>
            </dependency>

            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${javax.xml.bind.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc11</artifactId>
                <version>${ojdbc.version}</version>
            </dependency>

            <dependency>
                <groupId>no.nav.oppgavehandtering</groupId>
                <artifactId>oppgavehandtering-security</artifactId>
                <version>${oppgavehandtering-security.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.abac.policies</groupId>
                <artifactId>abac-attribute-constants</artifactId>
                <version>${abac.attribute.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.oppgavehandtering</groupId>
                <artifactId>oppgavehandtering-resilience</artifactId>
                <version>${oppgavehandtering-resilience.version}</version>
            </dependency>

            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash.encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>com.papertrailapp</groupId>
                <artifactId>logback-syslog4j</artifactId>
                <version>${logback-syslog4j.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-core</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-classic</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-jaxrs2</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>swagger-ui</artifactId>
                <version>${swagger-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-configuration2</artifactId>
                <version>${commons.configuration.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons.beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ehcache</groupId>
                <artifactId>ehcache</artifactId>
                <version>${ehcache.version}</version>
            </dependency>
            <!-- Security -->
            <dependency>
                <groupId>no.nav.security</groupId>
                <artifactId>token-validation-jaxrs</artifactId>
                <version>${token-support.version}</version>
            </dependency>

            <!--END Security -->

            <!-- Test -->
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>oauth2-oidc-sdk</artifactId>
                <version>${nimbusds.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>${javax.ws.rs-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <!--plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>${maven-toolchains-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin-->
        </plugins>
    </build>
</project>
